--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <div class="col-lg-5 align-items-stretch order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">&nbsp;
             <video autoplay loop muted width="100%" height="100%">
               <source src="assets/img/background-video.mp4">
-          </video>
+            </video>
           </div>
         </div>
 
@@ -329,6 +329,9 @@
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
+      <video autoplay loop muted width="100%" height="100%">
+        <source src="assets/img/background-video.mp4">
+      </video>
       <div class="container" data-aos="zoom-in">
 
         <div class="row">
